Added a place for feature requests.

--- a/README.org
+++ b/README.org
@@ -399,3 +399,5 @@ AsciiMath notation that works in all modern browsers."
     : #+HTML: <!--more-->
 
     at the location where you wish to split the post.
+
+* Feature Request List
