--- a/README.org
+++ b/README.org
@@ -401,5 +401,4 @@ AsciiMath notation that works in all modern browsers."
     at the location where you wish to split the post.
 
 * Feature Request List
-
-- Use the WordPress REST API instead of MetaWeblog
+** Use the WordPress REST API Instead Of MetaWeblog
