--- a/README.org
+++ b/README.org
@@ -86,28 +86,40 @@
     variable =org2blog/wp-blog-alist= there is detail information about the
     meaning of each property.
 
-    You can also use =.netrc= or =.authinfo= files to save your usernames and
-    passwords.
+***** Defining your blog setup to automate the login process
 
-    Your =.netrc= should look like this
+    Org2Blog can automatically log you in if you configure a =.netrc= or
+    =.authinfo= file in your home directory.
 
-    : machine myblog login myusername password myrealpassword
+    Your configuration should look like this
 
-    Then, use these details, as shown below.
+    #+begin_src sh
+machine ⟪myblog⟫ login ⟪myusername⟫ password ⟪myrealpassword⟫
+    #+end_src
+
+    or like this
+
+    #+begin_src sh
+machine ⟪myblog⟫
+login ⟪myusername⟫
+password ⟪myrealpassword⟫
+    #+end_src
+
+    Whatever format you use: first replace the contents of the double angle brackets
+    with the actual values, and finally remove the double brackets themselves.
+
+    Then, configure your blog using those credentials, as shown below.
 
     #+BEGIN_SRC emacs-lisp
-      (require 'auth-source) ;; or nothing if already in the load-path
-
-      (let (credentials)
-        ;; only required if your auth file is not already in the list of auth-sources
-        (add-to-list 'auth-sources "~/.netrc")
-        (setq credentials (auth-source-user-and-password "myblog"))
-        (setq org2blog/wp-blog-alist
-              `(("my-blog"
+(require 'auth-source)
+(let* ((credentials (auth-source-user-and-password "⟪myblog⟫"))
+       (username (nth 0 credentials))
+       (password (nth 1 credentials))
+       (config `("wordpress"
                  :url "http://username.server.com/xmlrpc.php"
-                 :username ,(car credentials)
-                 :password ,(cadr credentials)))))
-
+                 :username ,username
+                 :password ,password))))
+  (setq org2blog/wp-blog-alist config))
     #+END_SRC
 
     To browse or customize other variables use the customize group
