--- a/README.org
+++ b/README.org
@@ -118,7 +118,7 @@ password ⟪myrealpassword⟫
                  :url "http://username.server.com/xmlrpc.php"
                  :username ,username
                  :password ,password)))
-  (setq org2blog/wp-blog-alist config)))
+  (setq org2blog/wp-blog-alist config))
     #+END_SRC
 
     To browse or customize other variables use the customize group
