--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
-#+TITLE: Org2blog Readme
-#+Options: num:nil
-#+STARTUP: odd
-#+Style: <style> h1,h2,h3 {font-family: arial, helvetica, sans-serif} </style>
+#+title: Org2blog Readme
+#+options: num:nil
+#+startup: odd
+#+style: <style> h1,h2,h3 {font-family: arial, helvetica, sans-serif} </style>
 
 [[https://gitter.im/punchagan/org2blog?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge][https://badges.gitter.im/Join%20Chat.svg]] [[https://travis-ci.org/punchagan/org2blog][https://travis-ci.org/punchagan/org2blog.svg]]
 
@@ -207,9 +207,9 @@ simple.
 Here is an example that displays your post or page information in the
 =*Messages*= buffer:
 
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp
 (add-hook 'org2blog/wp-after-new-post-or-page-functions (lambda (p) (pp p)))
-#+END_SRC
+#+end_src
 
 *** Post your existing org-files too
 
